<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@android:color/white"
    tools:context=".StoreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/arrow_back"
            android:id="@+id/back_arrow_button_store"
            android:onClick="goBack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:id="@+id/back_text_store"
            android:autoSizeMinTextSize="20sp"
            android:textSize="26sp"
            android:textColor="#143656"
            android:layout_toEndOf="@id/back_arrow_button_store"
            android:gravity="center_vertical"
            android:onClick="goBack"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:autoSizeMinTextSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/set_name_and_password"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">

        <RelativeLayout
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/storeDescriptionLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/storeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/storePasswordLayout"
            app:passwordToggleEnabled="true"
            android:layout_below="@id/storeDescriptionLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/storePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_store"
            android:layout_below="@id/storePasswordLayout"
            android:layout_margin="20dp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:autoSizeMinTextSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:textColor="#143656"
            android:textSize="40sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:layout_centerInParent="true"
            app:rippleColor="#33AAAAAA"
            android:paddingVertical="20sp"
            android:paddingHorizontal="40sp"
            android:enabled="false"
            app:strokeColor="#143656"
            app:strokeWidth="4dp"
            android:onClick="storePassword"/>

    </RelativeLayout>


</LinearLayout>