<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:gravity="center"
            android:autoSizeMinTextSize="40sp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/store_password_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/store_password"
            android:textColor="#143656"
            android:textSize="30sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:layout_centerInParent="true"
            app:rippleColor="#33AAAAAA"
            android:paddingVertical="20sp"
            android:paddingHorizontal="40sp"
            android:enabled="false"
            app:strokeColor="#143656"
            app:strokeWidth="4dp"
            android:onClick="storePassword"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/retrieve_password"
            android:textColor="#886451"
            android:textSize="30sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:layout_centerInParent="true"
            app:rippleColor="#33AAAAAA"
            android:paddingVertical="20sp"
            android:paddingHorizontal="40sp"
            android:enabled="false"
            app:strokeColor="#886451"
            app:strokeWidth="4dp"
            android:onClick="retrievePassword"/>

    </RelativeLayout>

</LinearLayout>